--- a/tweet/templates/tweet_form.html
+++ b/tweet/templates/tweet_form.html
@@ -1,21 +1,57 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    chaiheadq
+    {% if form.instance.pk %}Edit Tweet{% else %}Create New Tweet{% endif %} | Tweetbar
 {% endblock %}
 
 {% block content %}
-    <h2>
-        {%if form.instance.pk %} 
-        Edit Tweet:
-        {% else %} 
-        Create Tweet
-        {% endif %}
-        <form method="post" enctype="multipart/form-data" class="form">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button class="btn btn-warning" type="submit">Submit</button>
-        </form>
-        <a href="{% url 'tweet_list' %}" class="btn btn-primary">Back to Tweet List</a>
-    </h2>
+<div class="tweet-form-container">
+    <div class="row">
+        <div class="col-lg-8 mx-auto">
+            <h2 class="tweet-form-title">
+                {% if form.instance.pk %}
+                <i class="fas fa-edit me-2"></i>Edit Your Tweet
+                {% else %}
+                <i class="fas fa-feather-alt me-2"></i>Create New Tweet
+                {% endif %}
+            </h2>
+            
+            <form method="post" enctype="multipart/form-data" class="form">
+                {% csrf_token %}
+                
+                <div class="mb-3">
+                    <label for="{{ form.text.id_for_label }}" class="form-label">What's happening?</label>
+                    {{ form.text.errors }}
+                    <textarea name="{{ form.text.name }}" id="{{ form.text.id_for_label }}" class="form-control" rows="4" placeholder="Share your thoughts...">{% if form.text.value %}{{ form.text.value }}{% endif %}</textarea>
+                    <div class="form-text">Maximum 240 characters</div>
+                </div>
+                
+                <div class="mb-4">
+                    <label for="{{ form.photo.id_for_label }}" class="form-label">Add a photo (optional)</label>
+                    {{ form.photo.errors }}
+                    {% if form.instance.photo %}
+                    <div class="mb-3">
+                        <img src="{{ form.instance.photo.url }}" class="img-fluid rounded" style="max-height: 200px;" alt="Current photo">
+                        <p class="form-text">Current photo. Upload a new one to replace it.</p>
+                    </div>
+                    {% endif %}
+                    <input type="file" name="{{ form.photo.name }}" id="{{ form.photo.id_for_label }}" class="form-control" accept="image/*">
+                </div>
+                
+                <div class="d-flex justify-content-between">
+                    <a href="{% url 'tweet_list' %}" class="btn btn-outline-secondary">
+                        <i class="fas fa-arrow-left me-2"></i>Cancel
+                    </a>
+                    <button class="btn btn-primary" type="submit">
+                        {% if form.instance.pk %}
+                        <i class="fas fa-save me-2"></i>Save Changes
+                        {% else %}
+                        <i class="fas fa-paper-plane me-2"></i>Tweet
+                        {% endif %}
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
